Add Login Method to AuthContorller

--- a/DatingApp.API/appsettings.json
+++ b/DatingApp.API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "AppSettings": {
+    "Token": "Super secrect key"
+  },
   "ConnectionStrings": {
     "Default": "Data Source=.\\sqlExpress;initial catalog=DatingAppDB; Integrated Security=True"
   },
