--- a/DatingApp-SPA/angular.json
+++ b/DatingApp-SPA/angular.json
@@ -23,11 +23,13 @@
             "styles": [
               "src/styles.css",
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
-              "node_modules/font-awesome/css/font-awesome.min.css"
+              "node_modules/font-awesome/css/font-awesome.min.css",
+              "node_modules/alertify.js/dist/css/alertify.css"
             ],
             "scripts": [
               "node_modules/jquery/dist/jquery.min.js",
-              "node_modules/bootstrap/dist/js/bootstrap.min.js"
+              "node_modules/bootstrap/dist/js/bootstrap.min.js",
+              "node_modules/alertify.js/dist/js/alertify.js"
             ]
           },
           "configurations": {
