--- a/DatingApp-SPA/package.json
+++ b/DatingApp-SPA/package.json
@@ -19,6 +19,8 @@
     "@angular/platform-browser": "~8.2.11",
     "@angular/platform-browser-dynamic": "~8.2.11",
     "@angular/router": "~8.2.11",
+    "alertify.js": "^1.0.12",
+    "alertifyjs": "^1.12.0",
     "bootstrap": "^4.3.1",
     "font-awesome": "^4.7.0",
     "jquery": "^3.4.1",
