--- a/DatingApp-SPA/angular.json
+++ b/DatingApp-SPA/angular.json
@@ -23,6 +23,7 @@
             "styles": [
               "src/styles.css",
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "node_modules/bootswatch/dist/united/bootstrap.min.css",
               "node_modules/font-awesome/css/font-awesome.min.css",
               "node_modules/alertify.js/dist/css/alertify.css"
             ],
