--- a/DatingApp-SPA/package.json
+++ b/DatingApp-SPA/package.json
@@ -23,6 +23,7 @@
     "alertify.js": "^1.0.12",
     "alertifyjs": "^1.12.0",
     "bootstrap": "^4.3.1",
+    "bootswatch": "^4.3.1",
     "font-awesome": "^4.7.0",
     "jquery": "^3.4.1",
     "ngx-bootstrap": "^5.2.0",
